# cute

./: .gitlab-ci.yml  NEWS  README.md  capsule.doap  meson.build  meson_options.txt  org.gnome.Capsule.Devel.json  org.gnome.Prompt.Devel.json  org.gnome.Ptyxis.Devel.json  prompt.doap
agent/: meson.build  org.gnome.Prompt.Agent.xml  org.gnome.Ptyxis.Agent.xml  prompt-agent-compat.h  prompt-agent-impl.c  prompt-agent-impl.h  prompt-agent-util.c  prompt-agent.c  prompt-distrobox-container.c  prompt-distrobox-container.h  prompt-mount-device.c  prompt-mount-device.h  prompt-mount-namespace.c  prompt-mount-namespace.h  prompt-mount.c  prompt-mount.h  prompt-podman-container.c  prompt-podman-container.h  prompt-podman-provider.c  prompt-podman-provider.h  prompt-process-impl.c  prompt-run-context.c  prompt-run-context.h  prompt-session-container.c  prompt-session-container.h  prompt-toolbox-container.c  prompt-translate-path.c  prompt-translate-path.h  prompt-unix-fd-map.c  prompt-unix-fd-map.h  ptyxis-agent-impl.c  ptyxis-agent-impl.h  ptyxis-agent-util.c  ptyxis-agent-util.h  ptyxis-agent.c  ptyxis-distrobox-container.c  ptyxis-podman-container.c  ptyxis-podman-container.h  ptyxis-podman-provider.c  ptyxis-podman-provider.h  (+4 more)
build-aux/: 0001-Add-sequences-and-signals-for-desktop-notification.patch  0001-add-notification-and-shell-precmd-preexec.patch  0001-build-disable-app.patch  0001-termprops-add-a-progress-termprop.patch  0001-widget-Add-termprops-to-replace-fedora-patches.patch  0002-a11y-implement-GtkAccessibleText.patch  0002-osc-implement-9-4-OSC-for-progress-tracking.patch  0002-vte.sh-Emit-OSC-777-from-PROMPT_COMMAND.patch  0003-Test-the-notification-received-signal.patch  0004-Support-preexec-notifications-from-an-interactive-sh.patch  0005-Test-the-shell-preexec-signal.patch  0006-Support-precmd-notifications-from-an-interactive-she.patch  0007-Test-the-shell-precmd-signal.patch  0008-Support-tracking-the-active-container-inside-the-ter.patch  0009-expose-notification-shellcmd-containers-to-GTK-4.patch  0009-terminal-make-new-API-available-to-GTK-4.patch  0010-vte-drive-updates-from-GdkFrameClock.patch  0011-vte-emit-adjustment-changed-in-tick-callback.patch  0012-vte-reorder-terminal-process-priority-each-pass.patch  build-fix.patch  vte.sh-forward-port-notify-prexec-precmd.patch
data/: meson.build  org.gnome.Capsule.desktop.in  org.gnome.Capsule.metainfo.xml.in  org.gnome.Prompt.desktop.in  org.gnome.Prompt.desktop.in.in  org.gnome.Prompt.metainfo.xml.in  org.gnome.Prompt.metainfo.xml.in.in  org.gnome.Prompt.service.in  org.gnome.Ptyxis.desktop.in.in  org.gnome.Ptyxis.metainfo.xml.in.in
data/icons/: meson.build
data/icons/hicolor/: meson.build
data/palettes/: README.md
man/: meson.build  ptyxis.1
po/: LINGUAS  POTFILES  POTFILES.in  be.po  ca.po  cs.po  de.po  en_GB.po  es.po  eu.po  fa.po  fi.po  he.po  hi.po  id.po  it.po  ja.po  ka.po  meson.build  nb.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: capsule-action-group.h  capsule-application.c  capsule-application.h  capsule-close-dialog.c  capsule-close-dialog.h  capsule-close-dialog.ui  capsule-container.c  capsule-container.h  capsule-find-bar.c  capsule-find-bar.h  capsule-find-bar.ui  capsule-host-container.c  capsule-host-container.h  capsule-palette.c  capsule-palette.h  capsule-preferences-list-item.c  capsule-preferences-list-item.h  capsule-preferences-window.c  capsule-preferences-window.h  capsule-preferences-window.ui  capsule-process.c  capsule-process.h  capsule-profile-editor.c  capsule-profile-editor.h  capsule-profile-editor.ui  capsule-profile-menu.c  capsule-profile-menu.h  capsule-profile-row.c  capsule-profile-row.h  capsule-profile-row.ui  capsule-profile.c  capsule-profile.h  capsule-run-context.c  capsule-run-context.h  capsule-settings.c  capsule-settings.h  capsule-shortcut-accel-dialog.c  capsule-shortcut-accel-dialog.h  capsule-shortcut-accel-dialog.ui  capsule-shortcut-row.c  (+190 more)
src/agent/: meson.build  org.gnome.Prompt.Agent.xml  prompt-agent-compat.h  prompt-agent-impl.c  prompt-agent-impl.h  prompt-agent-util.c  prompt-agent-util.h  prompt-agent.c  prompt-container-provider.c  prompt-container-provider.h  prompt-podman-container.c  prompt-podman-container.h  prompt-podman-provider.c  prompt-process-impl.c  prompt-process-impl.h  prompt-run-context.c  prompt-session-container.c  prompt-session-container.h  prompt-toolbox-container.c  prompt-unix-fd-map.c
src/palettes/: 3024 Day.palette  3024 Night.palette  Ayu Dark.palette  Ayu Light.palette  Belafonte Day.palette  Belafonte Night.palette  Breath Darker.palette  Breath Light.palette  Breath.palette  Campbell.palette  Clone Of Ubuntu.palette  Everforest Dark.palette  Everforest Light.palette  GNOME Terminal.palette  Github Dark.palette  Github Light.palette  Google Dark.palette  Google Light.palette  Gruvbox Dark.palette  Gruvbox.palette  Hemisu Dark.palette  Hemisu Light.palette  Horizon Bright.palette  Horizon Dark.palette  Lunaria Dark.palette  Lunaria Light.palette  One Dark.palette  One Light.palette  Papercolor Dark.palette  Papercolor Light.palette  Papercolor.palette  Pencil Dark.palette  Pencil Light.palette  Selenized Dark.palette  Selenized Light.palette  Solarized Dark.palette  Solarized Light.palette  Vs Code Dark+.palette  Vs Code Light+.palette  campbell.palette  (+8 more)
subprojects/: vte.wrap
